# cloud-run-sandbox

./: .gitignore  .tool-versions  Makefile  README.md
app/logging/: .dockerignore  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml
app/logging/scripts/: fetch-latest-image.sh
app/logging/src/: main.py
app/logging/src/libs/: log.py
terraform/envs/dev/: .terraform.lock.hcl  Makefile  main.tf  outputs.tf  variables.tf  versions.tf
terraform/modules/artifact_registory_repository/: main.tf  output.tf  variable.tf
terraform/modules/cloud_run/: main.tf  output.tf  variable.tf
terraform/modules/cloudrun/: main.tf  variable.tf
terraform/modules/tfstate_gcs_bucket/: main.tf
