[project]
name = "logging"
version = "0.1.0"
description = "sandbox for cloud logging in cloud run"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "google-cloud-logging~=3.11.2",
  "uvicorn[standard]~=0.31.0",
  "fastapi[standard]~=0.115.0",
]

[tool.uv]
dev-dependencies = ["pytest~=8.3.2", "mypy~=1.11.2", "ruff~=0.6.3"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
extend-select = ["I"]

[tool.mypy]
python_version = "3.12"
exclude = [".venv"]
disable_error_code = ["import-untyped"]
